--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.9.7",
     "husky": "^7.0.4",
     "vuepress": "^1.9.7",
     "vuepress-theme-reco": "^1.6.11"
