--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@vuepress/plugin-pwa": "^1.9.7",
     "husky": "^7.0.4",
     "vuepress": "^1.9.7",
+    "vuepress-plugin-copyright": "^1.0.2",
+    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-theme-reco": "^1.6.11"
   }
 }
