--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "^7.0.4",
     "vuepress": "^1.9.7",
     "vuepress-plugin-copyright": "^1.0.2",
+    "vuepress-plugin-cursor-effects": "^1.1.2",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-theme-reco": "^1.6.11"
   }
