--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuepress": "^1.9.7",
     "vuepress-plugin-copyright": "^1.0.2",
     "vuepress-plugin-cursor-effects": "^1.1.2",
+    "vuepress-plugin-dynamic-title": "^1.0.0",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-theme-reco": "^1.6.11"
   }
